# trustlens

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
data/: load_olist.py
docs/superpowers/plans/: 2026-06-22-clean-enterprise-banner.md
docs/superpowers/specs/: 2026-06-22-clean-enterprise-banner-design.md
eval/: eval_set.json  questions_raw.json  run_eval.py
examples/: demo_verifier.py  sample_pipeline_run.txt
src/trustlens/: __init__.py  audit.py  db.py  eval.py  mcp_server.py  model_config.py  pipeline.py  run_analyst.py  sample_data.py  security.py  verification.py
src/trustlens/agents/: __init__.py  analyst.py  planner.py  reporter.py  verifier.py
tests/: test_agents_construct.py  test_analyst_smoke.py  test_audit.py  test_eval.py  test_mcp_tools.py  test_pipeline.py  test_sample_data.py  test_security.py  test_verification.py
